--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.2",
     "typescript": "^5.5.4"
